# codex-metabolism

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.zh-TW.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
codex_metabolism/: __init__.py  advisor.py  agents_review.py  automation.py  catalog.py  cli.py  codex_command.py  decide.py  evidence.py  evidence_export.py  interventions.py  lifecycle.py  models.py  names.py  observe.py  proposals.py  stage.py
codex_metabolism/integrations/: __init__.py  skillreaper.py
docs/: DEMO_VIDEO.md  DEVPOST.md  EVALUATION.md  FORWARD_TEST.md  REAL_SESSION_EVALUATION.md  REAL_SESSION_REVIEW.md  demo-voiceover.en.srt
examples/: anonymized-real-session-evaluation.json  reviewed-catalog.json  run_agent_first_demo.py  run_closed_loop_demo.py  run_detector_evaluation.py  run_friction_cases_demo.py  run_messy_evidence_demo.py  run_real_session_evaluation.py  skillreaper-report.json
examples/demo-home/.agents/skills/healthy-skill/: SKILL.md
examples/demo-home/.agents/skills/old-unused/: SKILL.md
examples/demo-home/.codex/sessions/2026/07/20/: rollout-demo-one.jsonl  (+1 more)
examples/demo-project/: AGENTS.md  README.md
references/: proposal-schema.md  scheduled-review.md
tests/: helpers.py  test_advisor.py  test_agent_first.py  test_agents_review.py  test_automation.py  test_catalog.py  test_cli.py  test_closed_loop_demo.py  test_decide.py  test_demo.py  test_detector_evaluation.py  test_evidence_export.py  test_friction_cases_demo.py  test_interventions.py  test_ladder.py  test_lifecycle.py  test_messy_evidence_demo.py  test_metabolism_contract.py  test_observe.py  test_proposals.py  test_real_session_evaluation.py  test_skillreaper.py  test_stage.py  test_submission_docs.py
