[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-metabolism"
version = "0.2.0"
description = "Agent-first, human-gated metabolism for Codex collaboration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Codex Metabolism contributors" }]
keywords = ["codex", "agent-skills", "developer-tools", "human-in-the-loop"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shihchengwei-lab/codex-metabolism"
Repository = "https://github.com/shihchengwei-lab/codex-metabolism"

[project.scripts]
codex-metabolism = "codex_metabolism.cli:main"

[tool.setuptools.packages.find]
include = ["codex_metabolism*"]
